# pic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  FORTRAN_STYLE.md  README.md  codecov.yml  contributing.md  environment.yml  ford.md  fpm.toml  index.html  modules.json  no_compiler_env.yml  search.html
app/: main.F90  main.f90
blas_tests/: CMakeLists.txt
build_ccompat/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  app  build.ninja  cmake_install.cmake  compile_commands.json  picConfig.cmake
build_default/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  app  build.ninja  cmake_install.cmake  compile_commands.json
cmake/: CMakeLists.txt  picConfig.cmake.in
cmake/modules/: Findjonquil.cmake  Findtest-drive.cmake  Findvapaa.cmake  pic_utils.cmake  print_status.cmake
conda_envs/: environment.yml  no_compiler_env.yml
examples/pic_cmake/: CMakeLists.txt  README.md  main.f90
interface/: adjustl.html  adjustr.html  assignment(=).html  blas_asum.html  blas_axpy.html  blas_copy.html  blas_dot.html  blas_gemm.html  blas_gemv.html  blas_iamax.html  blas_scal.html  char.html  chomp.html  clamp.html  copy.html  count.html  ends_with.html  fill.html  find.html  fnv_1_hash.html  fnv_1a_hash.html  fuck_my_array_up.html  get_precision.html  get_threading_mode.html  iachar.html  ichar.html  index.html  is_close.html  is_equal.html  is_in_range.html  is_sorted.html  join.html  len_trim.html  lge.html  lgt.html  lle.html  llt.html  mean.html  min_max.html  move.html  (+68 more)
latest/: index.html  search.html
lists/: files.html  modules.html  procedures.html  types.html
module/: pic.html  pic_array.html  pic_ascii.html  pic_blas_interfaces.html  pic_command_line.html  pic_constants.html  pic_debugging_tools.html  pic_device.html  pic_error.html  pic_flop_rate.html  pic_flop_recorder.html  pic_global_definitions.html  pic_gpu_runtime.html  pic_hash_32bit.html  pic_hash_32bit_fnv.html  pic_io.html  pic_knowledge.html  pic_logger.html  pic_math.html  pic_matrix_printer.html  pic_matrix_printer_v2.html  pic_mpi.html  pic_optional_value.html  pic_output_helpers.html  pic_profiler.html  pic_pure_logger.html  pic_sorting.html  pic_sorting_ord_sort.html  pic_sorting_radix_sort.html  pic_sorting_run_type.html  pic_sorting_sort.html  pic_sorting_sort_index.html  pic_statistics.html  pic_stdlib_ascii.html  pic_stdlib_string_type.html  pic_stdlib_string_type_constructor.html  pic_stdlib_strings.html  pic_stdlib_strings_to_string.html  pic_string.html  pic_string_mod.html  (+13 more)
page/: contributing.html  design.html  index.html
proc/: add_flops.html  adjustl_string.html  adjustr_string.html  assign_string_char.html  buffer_message.html  char_decrease_ord_sort.html  char_decrease_sort.html  char_eq_pic_string.html  (+499 more)
src/lib/: CMakeLists.txt
src/lib/arrays/: pic_array.f90
src/lib/blas/: CMakeLists.txt  pic_blas_interfaces.F90
src/lib/command_line/: pic_command_line.f90
src/lib/constants/: pic_constants.f90
src/lib/core/: CMakeLists.txt
src/lib/core/arrays/: CMakeLists.txt  pic_array.f90
src/lib/core/command_line/: pic_command_line.f90
src/lib/core/constants/: CMakeLists.txt
src/lib/core/error/: CMakeLists.txt  pic_error.F90
src/lib/core/flop_rate/: CMakeLists.txt  pic_flop_rate.f90
src/lib/core/flop_recorder/: CMakeLists.txt  pic_flop_recorder.f90
src/lib/core/hash/: CMakeLists.txt  pic_hash_32bit.f90  pic_hash_32bit_fnv.f90  stdlib_pic_hash_32bit.f90  stdlib_pic_hash_32bit_fnv.f90
src/lib/core/helpers/: CMakeLists.txt  pic_helpers.f90  pic_optional.f90
src/lib/core/io/: CMakeLists.txt  pic_io.f90
src/lib/core/knowledge/: CMakeLists.txt  knowledge.f90  pic_knowledge.f90  pic_knowledge_seed.c
src/lib/core/logger/: CMakeLists.txt  pic_logger.f90  pic_pure_logger.f90
src/lib/core/math/: CMakeLists.txt
src/lib/core/print/: CMakeLists.txt  pic_matrix_printer.f90  pic_output_helpers.f90
src/lib/core/profiler/: CMakeLists.txt  pic_profiler.F90
src/lib/core/sort/: CMakeLists.txt  pic_sorting.f90  pic_sorting_ord_sort.f90  pic_sorting_radix_sort.f90  pic_sorting_run_type.f90  pic_sorting_sort.f90  pic_sorting_sort_index.F90  pic_sorting_sort_index.f90
src/lib/core/statistics/: CMakeLists.txt  pic_statistics.f90
src/lib/core/strings/: CMakeLists.txt  pic_ascii.f90  pic_string_type.F90  pic_string_type.f90  pic_string_type_constructor.f90  pic_string_utils.f90  pic_strings.f90  pic_strings_to_strings.F90  stdlib_pic_ascii.f90  stdlib_pic_string_type.F90  stdlib_pic_string_type.f90  stdlib_pic_string_type_constructor.f90  stdlib_pic_strings.f90  stdlib_pic_strings_to_strings.F90  stdlib_pic_strings_to_strings.f90
src/lib/core/timer/: pic_timer.F90
src/lib/core/types/: pic_types.F90
src/lib/flop_rate/: pic_flop_rate.f90
src/lib/helpers/: pic_helpers.f90
src/lib/logger/: pic_logger.f90
src/lib/mpi/: CMakeLists.txt  pic_mpi.F90
src/lib/print/: CMakeLists.txt  pic_matrix_printer.f90  pic_matrix_printer_v2.f90  pic_string_utils.f90
src/lib/strings/: CMakeLists.txt
src/lib/timer/: pic_timer.F90
src/lib/types/: pic_types.F90
test/: CMakeLists.txt  README.md  add_tester.py  blas_tests.f90  helpers.f90  main_tests.f90  test_base_utils.f90  test_pic_array.f90  test_pic_ascii.f90  test_pic_blas_asum.f90  test_pic_blas_axpy.f90  test_pic_blas_copy.f90  test_pic_blas_dgemm.f90  test_pic_blas_dgemv.f90  test_pic_blas_dot.f90  test_pic_blas_iamax.f90  test_pic_blas_scal.f90  test_pic_blas_sgemm.f90  test_pic_blas_sgemv.f90  test_pic_error.f90  test_pic_flop_rate.f90  test_pic_flop_recorder.f90  test_pic_hash.f90  test_pic_logger.f90  test_pic_math.f90  test_pic_matrix_printer.f90  test_pic_matrix_printer_v2.f90  test_pic_optional.f90  test_pic_profiler.f90  test_pic_pure_logger.f90  test_pic_sorting.f90  test_pic_statistics.f90  test_pic_string.f90  test_pic_string_assignment.f90  test_pic_string_derivedtype_io.F90  test_pic_string_functions.f90  test_pic_string_intrinsic.f90  test_pic_string_match.f90  test_pic_string_operator.f90  test_pic_string_strip_chomp.F90  (+5 more)
(+1335 files in other folders)
