add_subdirectory(arrays)
add_subdirectory(types)
add_subdirectory(constants)
add_subdirectory(print)
add_subdirectory(strings)
add_subdirectory(logger)
add_subdirectory(command_line)
add_subdirectory(timer)
add_subdirectory(flop_recorder)
add_subdirectory(flop_rate)
add_subdirectory(helpers)
add_subdirectory(sort)
